user API 测试完毕
